--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/avif" href="https://cdn.vectorstock.com/i/2000v/83/61/modern-stock-trading-logo-vector-36058361.avif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
